<resources>
    <string name="app_name">WeatherApp</string>
    <string name="weather">Погода</string>
    <string name="search">Поиск</string>
    <string name="last_queries">Последние запросы</string>
    <string name="cancel">Отменить</string>
    <string name="weather_in_city">Погода в городе</string>
    <string name="date_example">Сегодня, 26 янв 2020</string>
    <string name="cloudy">Облачно</string>
    <string name="sunny">Солнечно</string>
    <string name="attractions">Достопримечательности</string>
    <string name="lorem_ipsum">Tempus at pharetra ipsum vel eleifend non vestibulum ac, tristique. Malesuada ac viverra blandit at vitae tellus sit tempus sem eu.</string>
    <string name="read_more">Читать дальше</string>
    <string name="on_map">На карте</string>
    <string name="turn">Свернуть</string>
</resources>