<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".choose_city.ChooseCityScreen">

    <TextView
        android:id="@+id/tvWeather"
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="47dp"
        android:paddingRight="16dp"
        android:text="@string/weather" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/border"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="15dp">

        <SearchView
            android:id="@+id/search_view"
            style="@style/search_view"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@drawable/border_radius"
            android:backgroundTint="@color/gray"

            android:iconifiedByDefault="false"

            android:queryHint="@string/search"
            app:defaultQueryHint="@string/search"
            app:queryHint="@string/search"


            app:searchHintIcon="@null"/>

        <TextView
            android:id="@+id/btnCancelSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_marginLeft="16dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        android:padding="23dp">

        <TextView
            android:id="@+id/tvLastQueries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_queries"
            android:textColor="@color/lightest_gray"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/city_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:divider="@null"
            android:dividerHeight="30dp"
            />
    </LinearLayout>
</LinearLayout>