<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="attractions.detail.PlaceDetailScreen"
    android:background="@color/background">

    <FrameLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center|center_vertical"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#00FFFFFF"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/arrow" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/sfbold"
            android:gravity="center"
            android:text="Название достопримечательности"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/example_place" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/tvPlaceName"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hyphenationFrequency="none"
                    android:text="Музей\nестественных наук"

                    />

                <TextView
                    android:id="@+id/tvPlaceAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:fontFamily="@font/sfregular"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnReadMore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/sfregular"
                    android:text="@string/read_more"
                    android:textColor="@color/button"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOnMap"
                    style="@style/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/on_map" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/map" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>